// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArtistsPage /> renders A artists 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={10}
  >
    <div
      className="Artists"
    >
      <PageHeader
        bsClass="page-header"
      >
        Artists
         
        <small>
          (
          1
           
          Artist
          )
        </small>
      </PageHeader>
      <div>
        <div
          className="filters"
        >
          <ul
            className="pagination pagination-sm"
          >
            <li
              onClick={[Function]}
            >
              <span>
                All
              </span>
            </li>
            <li
              className="active"
              key="0"
              onClick={[Function]}
            >
              <span>
                A
              </span>
            </li>
            <li
              key="1"
              onClick={[Function]}
            >
              <span>
                B
              </span>
            </li>
            <li
              key="2"
              onClick={[Function]}
            >
              <span>
                C
              </span>
            </li>
            <li
              key="3"
              onClick={[Function]}
            >
              <span>
                D
              </span>
            </li>
            <li
              key="4"
              onClick={[Function]}
            >
              <span>
                E
              </span>
            </li>
            <li
              key="5"
              onClick={[Function]}
            >
              <span>
                F
              </span>
            </li>
            <li
              key="6"
              onClick={[Function]}
            >
              <span>
                G
              </span>
            </li>
            <li
              key="7"
              onClick={[Function]}
            >
              <span>
                H
              </span>
            </li>
            <li
              key="8"
              onClick={[Function]}
            >
              <span>
                I
              </span>
            </li>
            <li
              key="9"
              onClick={[Function]}
            >
              <span>
                J
              </span>
            </li>
            <li
              key="10"
              onClick={[Function]}
            >
              <span>
                K
              </span>
            </li>
            <li
              key="11"
              onClick={[Function]}
            >
              <span>
                L
              </span>
            </li>
            <li
              key="12"
              onClick={[Function]}
            >
              <span>
                M
              </span>
            </li>
            <li
              key="13"
              onClick={[Function]}
            >
              <span>
                N
              </span>
            </li>
            <li
              key="14"
              onClick={[Function]}
            >
              <span>
                O
              </span>
            </li>
            <li
              key="15"
              onClick={[Function]}
            >
              <span>
                P
              </span>
            </li>
            <li
              key="16"
              onClick={[Function]}
            >
              <span>
                Q
              </span>
            </li>
            <li
              key="17"
              onClick={[Function]}
            >
              <span>
                R
              </span>
            </li>
            <li
              key="18"
              onClick={[Function]}
            >
              <span>
                S
              </span>
            </li>
            <li
              key="19"
              onClick={[Function]}
            >
              <span>
                T
              </span>
            </li>
            <li
              key="20"
              onClick={[Function]}
            >
              <span>
                U
              </span>
            </li>
            <li
              key="21"
              onClick={[Function]}
            >
              <span>
                V
              </span>
            </li>
            <li
              key="22"
              onClick={[Function]}
            >
              <span>
                W
              </span>
            </li>
            <li
              key="23"
              onClick={[Function]}
            >
              <span>
                X
              </span>
            </li>
            <li
              key="24"
              onClick={[Function]}
            >
              <span>
                Y
              </span>
            </li>
            <li
              key="25"
              onClick={[Function]}
            >
              <span>
                Z
              </span>
            </li>
            <li
              onClick={[Function]}
            >
              <FontAwesome
                name="search"
              />
            </li>
          </ul>
        </div>
        <VelocityTransitionGroup
          enter={
            Object {
              "animation": "slideDown",
              "complete": [Function],
              "duration": 250,
            }
          }
          enterHideStyle={
            Object {
              "display": "none",
            }
          }
          enterShowStyle={
            Object {
              "display": "",
            }
          }
          leave={
            Object {
              "animation": "slideUp",
              "duration": 250,
            }
          }
          runOnMount={false}
        />
      </div>
      <div
        className="Artist"
        key="1"
      >
        <Link
          replace={false}
          to="/artist/abc"
        >
          <h2>
            ABC
          </h2>
          <p />
          <span
            className="icon"
          >
            <FontAwesome
              name="music"
            />
             
            2
            <FontAwesome
              className="spacer-left-xs"
              name="comment-o"
            />
             
            50
          </span>
        </Link>
      </div>
    </div>
  </Col>
  <ArtistsSidebar
    mostRecentAlbums={
      Array [
        Object {
          "album_slug": "abc",
          "artist": "ABC",
          "artist_slug": "abc",
          "cover_url": "http://localhost:3000/uploads/album/cover/898/small_ABC--ABC.jpg",
          "id": 1,
          "title": "ABC",
        },
        Object {
          "album_slug": "def",
          "artist": "DEF",
          "artist_slug": "def",
          "cover_url": "http://localhost:3000/uploads/album/cover/154/small_DEF--DEF.jpg",
          "id": 2,
          "title": "DEF",
        },
      ]
    }
    mostRecentComments={
      Array [
        Object {
          "created_at": "<time datetime=\\"2018-03-08T02:55:33Z\\" data-local=\\"time-ago\\">March  8, 2018  2:55am</time>",
          "gravatar_url": "https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon",
          "id": 1,
          "name": "abc",
          "path": "artist/abc",
          "user_name": "fred",
          "user_slug": "fred",
        },
        Object {
          "created_at": "<time datetime=\\"2018-03-07T04:22:52Z\\" data-local=\\"time-ago\\">March  7, 2018  4:22am</time>",
          "gravatar_url": "https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon",
          "id": 2,
          "name": "def",
          "path": "artist/def/album/def",
          "user_name": "jon",
          "user_slug": "jon",
        },
      ]
    }
  />
</Row>
`;

exports[`<ArtistsPage /> renders ABC search match 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={10}
  >
    <div
      className="Artists"
    >
      <PageHeader
        bsClass="page-header"
      >
        Artists
         
        <small>
          (
          1
           
          Artist
          )
        </small>
      </PageHeader>
      <div>
        <div
          className="filters"
        >
          <ul
            className="pagination pagination-sm"
          >
            <li
              onClick={[Function]}
            >
              <span>
                All
              </span>
            </li>
            <li
              key="0"
              onClick={[Function]}
            >
              <span>
                A
              </span>
            </li>
            <li
              key="1"
              onClick={[Function]}
            >
              <span>
                B
              </span>
            </li>
            <li
              key="2"
              onClick={[Function]}
            >
              <span>
                C
              </span>
            </li>
            <li
              key="3"
              onClick={[Function]}
            >
              <span>
                D
              </span>
            </li>
            <li
              key="4"
              onClick={[Function]}
            >
              <span>
                E
              </span>
            </li>
            <li
              key="5"
              onClick={[Function]}
            >
              <span>
                F
              </span>
            </li>
            <li
              key="6"
              onClick={[Function]}
            >
              <span>
                G
              </span>
            </li>
            <li
              key="7"
              onClick={[Function]}
            >
              <span>
                H
              </span>
            </li>
            <li
              key="8"
              onClick={[Function]}
            >
              <span>
                I
              </span>
            </li>
            <li
              key="9"
              onClick={[Function]}
            >
              <span>
                J
              </span>
            </li>
            <li
              key="10"
              onClick={[Function]}
            >
              <span>
                K
              </span>
            </li>
            <li
              key="11"
              onClick={[Function]}
            >
              <span>
                L
              </span>
            </li>
            <li
              key="12"
              onClick={[Function]}
            >
              <span>
                M
              </span>
            </li>
            <li
              key="13"
              onClick={[Function]}
            >
              <span>
                N
              </span>
            </li>
            <li
              key="14"
              onClick={[Function]}
            >
              <span>
                O
              </span>
            </li>
            <li
              key="15"
              onClick={[Function]}
            >
              <span>
                P
              </span>
            </li>
            <li
              key="16"
              onClick={[Function]}
            >
              <span>
                Q
              </span>
            </li>
            <li
              key="17"
              onClick={[Function]}
            >
              <span>
                R
              </span>
            </li>
            <li
              key="18"
              onClick={[Function]}
            >
              <span>
                S
              </span>
            </li>
            <li
              key="19"
              onClick={[Function]}
            >
              <span>
                T
              </span>
            </li>
            <li
              key="20"
              onClick={[Function]}
            >
              <span>
                U
              </span>
            </li>
            <li
              key="21"
              onClick={[Function]}
            >
              <span>
                V
              </span>
            </li>
            <li
              key="22"
              onClick={[Function]}
            >
              <span>
                W
              </span>
            </li>
            <li
              key="23"
              onClick={[Function]}
            >
              <span>
                X
              </span>
            </li>
            <li
              key="24"
              onClick={[Function]}
            >
              <span>
                Y
              </span>
            </li>
            <li
              key="25"
              onClick={[Function]}
            >
              <span>
                Z
              </span>
            </li>
            <li
              onClick={[Function]}
            >
              <FontAwesome
                name="search"
              />
            </li>
          </ul>
        </div>
        <VelocityTransitionGroup
          enter={
            Object {
              "animation": "slideDown",
              "complete": [Function],
              "duration": 250,
            }
          }
          enterHideStyle={
            Object {
              "display": "none",
            }
          }
          enterShowStyle={
            Object {
              "display": "",
            }
          }
          leave={
            Object {
              "animation": "slideUp",
              "duration": 250,
            }
          }
          runOnMount={false}
        />
      </div>
      <div
        className="Artist"
        key="1"
      >
        <Link
          replace={false}
          to="/artist/abc"
        >
          <h2>
            ABC
          </h2>
          <p />
          <span
            className="icon"
          >
            <FontAwesome
              name="music"
            />
             
            2
            <FontAwesome
              className="spacer-left-xs"
              name="comment-o"
            />
             
            50
          </span>
        </Link>
      </div>
    </div>
  </Col>
  <ArtistsSidebar
    mostRecentAlbums={
      Array [
        Object {
          "album_slug": "abc",
          "artist": "ABC",
          "artist_slug": "abc",
          "cover_url": "http://localhost:3000/uploads/album/cover/898/small_ABC--ABC.jpg",
          "id": 1,
          "title": "ABC",
        },
        Object {
          "album_slug": "def",
          "artist": "DEF",
          "artist_slug": "def",
          "cover_url": "http://localhost:3000/uploads/album/cover/154/small_DEF--DEF.jpg",
          "id": 2,
          "title": "DEF",
        },
      ]
    }
    mostRecentComments={
      Array [
        Object {
          "created_at": "<time datetime=\\"2018-03-08T02:55:33Z\\" data-local=\\"time-ago\\">March  8, 2018  2:55am</time>",
          "gravatar_url": "https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon",
          "id": 1,
          "name": "abc",
          "path": "artist/abc",
          "user_name": "fred",
          "user_slug": "fred",
        },
        Object {
          "created_at": "<time datetime=\\"2018-03-07T04:22:52Z\\" data-local=\\"time-ago\\">March  7, 2018  4:22am</time>",
          "gravatar_url": "https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon",
          "id": 2,
          "name": "def",
          "path": "artist/def/album/def",
          "user_name": "jon",
          "user_slug": "jon",
        },
      ]
    }
  />
</Row>
`;

exports[`<ArtistsPage /> renders first page 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={10}
  >
    <div
      className="Artists"
    >
      <PageHeader
        bsClass="page-header"
      >
        Artists
         
        <small>
          (
          3
           
          Artists
          )
        </small>
      </PageHeader>
      <div>
        <div
          className="filters"
        >
          <ul
            className="pagination pagination-sm"
          >
            <li
              onClick={[Function]}
            >
              <span>
                All
              </span>
            </li>
            <li
              key="0"
              onClick={[Function]}
            >
              <span>
                A
              </span>
            </li>
            <li
              key="1"
              onClick={[Function]}
            >
              <span>
                B
              </span>
            </li>
            <li
              key="2"
              onClick={[Function]}
            >
              <span>
                C
              </span>
            </li>
            <li
              key="3"
              onClick={[Function]}
            >
              <span>
                D
              </span>
            </li>
            <li
              key="4"
              onClick={[Function]}
            >
              <span>
                E
              </span>
            </li>
            <li
              key="5"
              onClick={[Function]}
            >
              <span>
                F
              </span>
            </li>
            <li
              key="6"
              onClick={[Function]}
            >
              <span>
                G
              </span>
            </li>
            <li
              key="7"
              onClick={[Function]}
            >
              <span>
                H
              </span>
            </li>
            <li
              key="8"
              onClick={[Function]}
            >
              <span>
                I
              </span>
            </li>
            <li
              key="9"
              onClick={[Function]}
            >
              <span>
                J
              </span>
            </li>
            <li
              key="10"
              onClick={[Function]}
            >
              <span>
                K
              </span>
            </li>
            <li
              key="11"
              onClick={[Function]}
            >
              <span>
                L
              </span>
            </li>
            <li
              key="12"
              onClick={[Function]}
            >
              <span>
                M
              </span>
            </li>
            <li
              key="13"
              onClick={[Function]}
            >
              <span>
                N
              </span>
            </li>
            <li
              key="14"
              onClick={[Function]}
            >
              <span>
                O
              </span>
            </li>
            <li
              key="15"
              onClick={[Function]}
            >
              <span>
                P
              </span>
            </li>
            <li
              key="16"
              onClick={[Function]}
            >
              <span>
                Q
              </span>
            </li>
            <li
              key="17"
              onClick={[Function]}
            >
              <span>
                R
              </span>
            </li>
            <li
              key="18"
              onClick={[Function]}
            >
              <span>
                S
              </span>
            </li>
            <li
              key="19"
              onClick={[Function]}
            >
              <span>
                T
              </span>
            </li>
            <li
              key="20"
              onClick={[Function]}
            >
              <span>
                U
              </span>
            </li>
            <li
              key="21"
              onClick={[Function]}
            >
              <span>
                V
              </span>
            </li>
            <li
              key="22"
              onClick={[Function]}
            >
              <span>
                W
              </span>
            </li>
            <li
              key="23"
              onClick={[Function]}
            >
              <span>
                X
              </span>
            </li>
            <li
              key="24"
              onClick={[Function]}
            >
              <span>
                Y
              </span>
            </li>
            <li
              key="25"
              onClick={[Function]}
            >
              <span>
                Z
              </span>
            </li>
            <li
              onClick={[Function]}
            >
              <FontAwesome
                name="search"
              />
            </li>
          </ul>
        </div>
        <VelocityTransitionGroup
          enter={
            Object {
              "animation": "slideDown",
              "complete": [Function],
              "duration": 250,
            }
          }
          enterHideStyle={
            Object {
              "display": "none",
            }
          }
          enterShowStyle={
            Object {
              "display": "",
            }
          }
          leave={
            Object {
              "animation": "slideUp",
              "duration": 250,
            }
          }
          runOnMount={false}
        />
      </div>
      <div
        className="Artist"
        key="1"
      >
        <Link
          replace={false}
          to="/artist/abc"
        >
          <h2>
            ABC
          </h2>
          <p />
          <span
            className="icon"
          >
            <FontAwesome
              name="music"
            />
             
            2
            <FontAwesome
              className="spacer-left-xs"
              name="comment-o"
            />
             
            50
          </span>
        </Link>
      </div>
      <div
        className="Artist"
        key="2"
      >
        <Link
          replace={false}
          to="/artist/def"
        >
          <h2>
            DEF
          </h2>
          <p />
          <span
            className="icon"
          >
            <FontAwesome
              name="music"
            />
             
            4
            <FontAwesome
              className="spacer-left-xs"
              name="comment-o"
            />
             
            2
          </span>
        </Link>
      </div>
      <Paginator
        onPageChange={[Function]}
        pagination={
          Object {
            "current_page": 1,
            "next_page": 2,
            "prev_page": null,
            "total_count": 3,
            "total_pages": 2,
          }
        }
      />
    </div>
  </Col>
  <ArtistsSidebar
    mostRecentAlbums={
      Array [
        Object {
          "album_slug": "abc",
          "artist": "ABC",
          "artist_slug": "abc",
          "cover_url": "http://localhost:3000/uploads/album/cover/898/small_ABC--ABC.jpg",
          "id": 1,
          "title": "ABC",
        },
        Object {
          "album_slug": "def",
          "artist": "DEF",
          "artist_slug": "def",
          "cover_url": "http://localhost:3000/uploads/album/cover/154/small_DEF--DEF.jpg",
          "id": 2,
          "title": "DEF",
        },
      ]
    }
    mostRecentComments={
      Array [
        Object {
          "created_at": "<time datetime=\\"2018-03-08T02:55:33Z\\" data-local=\\"time-ago\\">March  8, 2018  2:55am</time>",
          "gravatar_url": "https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon",
          "id": 1,
          "name": "abc",
          "path": "artist/abc",
          "user_name": "fred",
          "user_slug": "fred",
        },
        Object {
          "created_at": "<time datetime=\\"2018-03-07T04:22:52Z\\" data-local=\\"time-ago\\">March  7, 2018  4:22am</time>",
          "gravatar_url": "https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon",
          "id": 2,
          "name": "def",
          "path": "artist/def/album/def",
          "user_name": "jon",
          "user_slug": "jon",
        },
      ]
    }
  />
</Row>
`;

exports[`<ArtistsPage /> renders second page 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={10}
  >
    <div
      className="Artists"
    >
      <PageHeader
        bsClass="page-header"
      >
        Artists
         
        <small>
          (
          3
           
          Artists
          )
        </small>
      </PageHeader>
      <div>
        <div
          className="filters"
        >
          <ul
            className="pagination pagination-sm"
          >
            <li
              onClick={[Function]}
            >
              <span>
                All
              </span>
            </li>
            <li
              key="0"
              onClick={[Function]}
            >
              <span>
                A
              </span>
            </li>
            <li
              key="1"
              onClick={[Function]}
            >
              <span>
                B
              </span>
            </li>
            <li
              key="2"
              onClick={[Function]}
            >
              <span>
                C
              </span>
            </li>
            <li
              key="3"
              onClick={[Function]}
            >
              <span>
                D
              </span>
            </li>
            <li
              key="4"
              onClick={[Function]}
            >
              <span>
                E
              </span>
            </li>
            <li
              key="5"
              onClick={[Function]}
            >
              <span>
                F
              </span>
            </li>
            <li
              key="6"
              onClick={[Function]}
            >
              <span>
                G
              </span>
            </li>
            <li
              key="7"
              onClick={[Function]}
            >
              <span>
                H
              </span>
            </li>
            <li
              key="8"
              onClick={[Function]}
            >
              <span>
                I
              </span>
            </li>
            <li
              key="9"
              onClick={[Function]}
            >
              <span>
                J
              </span>
            </li>
            <li
              key="10"
              onClick={[Function]}
            >
              <span>
                K
              </span>
            </li>
            <li
              key="11"
              onClick={[Function]}
            >
              <span>
                L
              </span>
            </li>
            <li
              key="12"
              onClick={[Function]}
            >
              <span>
                M
              </span>
            </li>
            <li
              key="13"
              onClick={[Function]}
            >
              <span>
                N
              </span>
            </li>
            <li
              key="14"
              onClick={[Function]}
            >
              <span>
                O
              </span>
            </li>
            <li
              key="15"
              onClick={[Function]}
            >
              <span>
                P
              </span>
            </li>
            <li
              key="16"
              onClick={[Function]}
            >
              <span>
                Q
              </span>
            </li>
            <li
              key="17"
              onClick={[Function]}
            >
              <span>
                R
              </span>
            </li>
            <li
              key="18"
              onClick={[Function]}
            >
              <span>
                S
              </span>
            </li>
            <li
              key="19"
              onClick={[Function]}
            >
              <span>
                T
              </span>
            </li>
            <li
              key="20"
              onClick={[Function]}
            >
              <span>
                U
              </span>
            </li>
            <li
              key="21"
              onClick={[Function]}
            >
              <span>
                V
              </span>
            </li>
            <li
              key="22"
              onClick={[Function]}
            >
              <span>
                W
              </span>
            </li>
            <li
              key="23"
              onClick={[Function]}
            >
              <span>
                X
              </span>
            </li>
            <li
              key="24"
              onClick={[Function]}
            >
              <span>
                Y
              </span>
            </li>
            <li
              key="25"
              onClick={[Function]}
            >
              <span>
                Z
              </span>
            </li>
            <li
              onClick={[Function]}
            >
              <FontAwesome
                name="search"
              />
            </li>
          </ul>
        </div>
        <VelocityTransitionGroup
          enter={
            Object {
              "animation": "slideDown",
              "complete": [Function],
              "duration": 250,
            }
          }
          enterHideStyle={
            Object {
              "display": "none",
            }
          }
          enterShowStyle={
            Object {
              "display": "",
            }
          }
          leave={
            Object {
              "animation": "slideUp",
              "duration": 250,
            }
          }
          runOnMount={false}
        />
      </div>
      <div
        className="Artist"
        key="3"
      >
        <Link
          replace={false}
          to="/artist/ghi"
        >
          <h2>
            GHI
          </h2>
          <p />
          <span
            className="icon"
          >
            <FontAwesome
              name="music"
            />
             
            7
            <FontAwesome
              className="spacer-left-xs"
              name="comment-o"
            />
             
            23
          </span>
        </Link>
      </div>
      <Paginator
        onPageChange={[Function]}
        pagination={
          Object {
            "current_page": 2,
            "next_page": null,
            "prev_page": 1,
            "total_count": 3,
            "total_pages": 2,
          }
        }
      />
    </div>
  </Col>
  <ArtistsSidebar
    mostRecentAlbums={
      Array [
        Object {
          "album_slug": "abc",
          "artist": "ABC",
          "artist_slug": "abc",
          "cover_url": "http://localhost:3000/uploads/album/cover/898/small_ABC--ABC.jpg",
          "id": 1,
          "title": "ABC",
        },
        Object {
          "album_slug": "def",
          "artist": "DEF",
          "artist_slug": "def",
          "cover_url": "http://localhost:3000/uploads/album/cover/154/small_DEF--DEF.jpg",
          "id": 2,
          "title": "DEF",
        },
      ]
    }
    mostRecentComments={
      Array [
        Object {
          "created_at": "<time datetime=\\"2018-03-08T02:55:33Z\\" data-local=\\"time-ago\\">March  8, 2018  2:55am</time>",
          "gravatar_url": "https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon",
          "id": 1,
          "name": "abc",
          "path": "artist/abc",
          "user_name": "fred",
          "user_slug": "fred",
        },
        Object {
          "created_at": "<time datetime=\\"2018-03-07T04:22:52Z\\" data-local=\\"time-ago\\">March  7, 2018  4:22am</time>",
          "gravatar_url": "https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon",
          "id": 2,
          "name": "def",
          "path": "artist/def/album/def",
          "user_name": "jon",
          "user_slug": "jon",
        },
      ]
    }
  />
</Row>
`;
